--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,31 +2,39 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: white;
 }
+
 .header {
     background-color: black;
     color: white;
     padding: 10px 0;
     font-size: 18px;
 }
+
 .header img {
     width: 50px;
     height: auto;
 }
+
 .header a {
     color: white;
 }
+
 .fa-github, .fa-globe {
     font-size: 24px;
 }
-.form-row {
+
+.form-row, .row {
     margin-bottom: 15px;
 }
-.form-control, .btn {
+
+.form-control, .btn, select {
     height: 40px;
 }
+
 .btn {
     padding: 5px 15px;
 }
+
 .table thead th {
     vertical-align: middle;
     background-color: black;
@@ -38,15 +46,19 @@ body {
     background-color: #f2f2f2;
     color: black;
 }
+
 .table th {
     cursor: pointer;
 }
+
 .alert-honeypot {
     background-color: #ffcccc;
 }
+
 .alert-nonhoneypot {
     background-color: #ccffcc;
 }
+
 .footer {
     background-color: grey;
     color: white;
@@ -58,9 +70,11 @@ body {
     padding: 10px 0;
     font-size: 10px;
 }
+
 .button-row {
-    margin-bottom: 20px; /* Adjust the value as needed */
+    margin-bottom: 20px;
 }
+
 .overlay {
     display: none;
     position: absolute;
@@ -86,4 +100,50 @@ body {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+#advancedOptions {
+    display: none;
+    margin-top: 15px;
+}
+
+#executionListTable {
+    margin-top: 30px;
+}
+
+#executionListTable th, #executionListTable td {
+    text-align: center;
+}
+
+.tooltip {
+    font-size: 14px;
+}
+
+/* Tooltip styling */
+[data-tooltip]:hover::before {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    font-size: 12px;
+    z-index: 1000;
+    width: 200px;
+}
+
+[data-tooltip]:hover::after {
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: #333 transparent transparent transparent;
+    z-index: 1000;
 }
